--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Tehro</string>
+    <string name="error">Error</string>
+    <string name="try_again">Try Again</string>
+    <string name="failed_to_load_data">Failed to load data</string>
 </resources>
