--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,5 @@
     <string name="instagram">Instagram</string>
     <string name="discord_server">Discord Server</string>
     <string name="telegram_channel">Telegram Channel</string>
-    <string name="medium">مدیوم</string>
+    <string name="medium">Medium</string>
 </resources>
