Update about_app string

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="branch">Branch</string>
     <string name="about">About</string>
     <string name="github">GitHub</string>
-    <string name="about_app">Tehro is an open-source metro guide for Tehran.</string>
+    <string name="about_app">Tehro is a free &amp; open-source guide application for Tehran Metro.</string>
     <string name="about_yasan">I\'m an indie developer &amp; designer.</string>
     <string name="twitter">Twitter</string>
     <string name="instagram">Instagram</string>
