--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -18,7 +18,7 @@
     <string name="branch">انشعاب</string>
     <string name="about">درباره</string>
     <string name="github">گیت‌هاب</string>
-    <string name="about_app">تهرو یک برنامه‌ی متن‌باز برای متروی تهران است.</string>
+    <string name="about_app">تهرو یک برنامه‌ آزاد و متن‌باز کمکی برای متروی تهران است.</string>
     <string name="about_yasan">من یک توسعه‌دهنده و طراح مستقل هستم.</string>
     <string name="medium">مدیوم</string>
     <string name="telegram_channel">کانال تلگرام</string>
