--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,6 @@
     <string name="telegram_channel">Telegram Channel</string>
     <string name="medium">Medium</string>
     <string name="database_last_modified_on_date">Database last modified on %1$s.</string>
+    <string name="view_on_map">View on Map</string>
 
 </resources>
