--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -26,4 +26,6 @@
     <string name="instagram">اینستاگرام</string>
     <string name="twitter">توییتر</string>
     <string name="database_last_modified_on_date">دیتابیس آخرین‌ بار در %1$s بروزرسانی شده است.</string>
+    <string name="view_on_map">دیدن روی نقشه</string>
+    <string name="station_not_found">ایستگاه پیدا نشد</string>
 </resources>
