--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,6 @@
     <string name="medium">Medium</string>
     <string name="database_last_modified_on_date">Database last modified on %1$s.</string>
     <string name="view_on_map">View on Map</string>
+    <string name="no_app_found_map">Could not find an app to open the location</string>
 
 </resources>
