--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -33,7 +33,7 @@
     <string name="cafe_bazaar">بازار</string>
     <string name="f_droid">اف‌دروید</string>
     <string name="unknown">ناشناخته</string>
-    <string name="not_accessible">قابل دسترسی نیست</string>
+    <string name="accessibility_wheelchair_not_accessible">با ویلچر قابل دسترسی نیست</string>
     <string name="accessibility_wheelchair_level_1">آسانسور از سطح خیابان به یک سکو</string>
     <string name="accessibility_wheelchair_level_2">آسانسور از سطح خیابان به هر دو سکو</string>
     <string name="accessibility_wheelchair_level_3">آسانسور از سالن فروش بلیت به سکو</string>
