Setup EMS accessiblity indicator

--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -38,5 +38,8 @@
     <string name="accessibility_wheelchair_level_2">آسانسور از سطح خیابان به هر دو سکو</string>
     <string name="accessibility_wheelchair_level_3">آسانسور از سالن فروش بلیت به سکو</string>
     <string name="accessibility_wheelchair_max">آسانسور از سطح خیابان به سالن فروش بلیت و از سالن فروش بلیط به سکو</string>
+    <string name="ems_available">دارای خدمات اورژانس پزشکی</string>
+    <string name="ems_unavailable">قافد خدمات اورژانس پزشکی</string>
+    <string name="emergency_medical_services">خدمات اورژانس پزشکی</string>
 
 </resources>
