--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -44,4 +44,7 @@
     <string name="accessibility_blind_not_accessible">فاقد مسیر نابینایان</string>
     <string name="accessibility_blind_platforms_only">دارای مسیر نابینابان در سکو‌ها</string>
     <string name="accessibility_blind_fully_accessible">دارای مسیر نابینایان در تمام ایستگاه</string>
+    <string name="stations">ایستگاه‌ها</string>
+    <string name="statistics">آمار</string>
+    <string name="intersections">تقاطع‌ها</string>
 </resources>
