--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,5 +47,6 @@
     <string name="accessibility_blind_fully_accessible">Accessible to the visually impaired</string>
     <string name="stations">Stations</string>
     <string name="intersections">Intersections</string>
+    <string name="statistics">Statistics</string>
 
 </resources>
