--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,7 @@
     <string name="accessibility_blind_fully_accessible">Accessible to the visually impaired</string>
     <string name="stations">Stations</string>
     <string name="intersections">Intersections</string>
-    <string name="statistics">Statistics</string>
-
+    <string name="database">Database</string>
+    <string name="station_location">Stations\' Location</string>
+    <string name="station_accessibility">Stations\' Accessibility</string>
 </resources>
