--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -49,4 +49,5 @@
     <string name="intersections">تقاطع‌ها</string>
     <string name="station_location">لوکیشن ایستگاه‌ها</string>
     <string name="station_accessibility">دسترسی ایستگاه‌ها</string>
+    <string name="statistics">آمار</string>
 </resources>
