--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -50,4 +50,5 @@
     <string name="station_location">لوکیشن ایستگاه‌ها</string>
     <string name="station_accessibility">دسترسی ایستگاه‌ها</string>
     <string name="statistics">آمار</string>
+    <string name="search">جستوجو</string>
 </resources>
