--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,5 @@
     <string name="station_location">Station Location</string>
     <string name="station_accessibility">Station Accessibility</string>
     <string name="statistics">Statistics</string>
+    <string name="search">Search</string>
 </resources>
