--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -51,4 +51,5 @@
     <string name="station_accessibility">دسترسی ایستگاه‌ها</string>
     <string name="statistics">آمار</string>
     <string name="search">جست‌وجو</string>
+    <string name="line_name">نام ایستگاه</string>
 </resources>
