--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
     <string name="station_accessibility">Station Accessibility</string>
     <string name="statistics">Statistics</string>
     <string name="search">Search</string>
+    <string name="line_name">Line Name</string>
 </resources>
