Improve how loading is handled + misc improvements

--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -52,4 +52,5 @@
     <string name="statistics">آمار</string>
     <string name="search">جست‌وجو</string>
     <string name="line_name">نام ایستگاه</string>
+    <string name="group_by_line">دسته‌بندی نسبت به خط</string>
 </resources>
