--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,5 @@
     <string name="statistics">Statistics</string>
     <string name="search">Search</string>
     <string name="line_name">Line Name</string>
+    <string name="group_by_line">Group by Line</string>
 </resources>
