--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,5 @@
     <string name="search">Search</string>
     <string name="line_name">Line Name</string>
     <string name="group_by_line">Group by Line</string>
+    <string name="settings">Settings</string>
 </resources>
